# neckbeard

./: .gitignore  .neckbeard.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
docs/: agent-skill.md  configuration.md  skill-evaluations.md
openspec/changes/archive/2026-07-19-bootstrap-neckbeard/: design.md  tasks.md
openspec/changes/archive/2026-07-19-bootstrap-neckbeard/specs/diff-budget-policy/: spec.md
openspec/changes/archive/2026-07-19-bootstrap-neckbeard/specs/git-diff-budget-check/: spec.md
openspec/changes/archive/2026-07-19-bootstrap-neckbeard/specs/portable-agent-skill/: spec.md
openspec/changes/bootstrap-neckbeard/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-neckbeard/specs/budget-verdict-output/: spec.md
openspec/changes/bootstrap-neckbeard/specs/dependency-change-gate/: spec.md
openspec/changes/bootstrap-neckbeard/specs/diff-budget-policy/: spec.md
openspec/changes/bootstrap-neckbeard/specs/git-diff-budget-check/: spec.md
openspec/specs/budget-verdict-output/: spec.md
openspec/specs/dependency-change-gate/: spec.md
openspec/specs/diff-budget-policy/: spec.md
openspec/specs/git-diff-budget-check/: spec.md
openspec/specs/portable-agent-skill/: spec.md
skills/neckbeard/: SKILL.md
src/neckbeard/: __init__.py  cli.py
tests/: test_cli.py
