[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neckbeard"
version = "0.1.0"
description = "Git diff scope checker"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
neckbeard = "neckbeard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
